tests/snapshots/test_runner__tests__compiler__typecheck__progressive_unification_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let o: [{x: Integer}] = [{x= null}]

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_4.kk:1:30
  │
1 │ let o: [{x: Integer}] = [{x= null}]
  │                              ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + Null      |
    +---------------+-------------+
